# EDA-proyecto

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: github-actions-demo.yml
config/: config.json
data/: source.txt
demo/: CSVReader.hpp  EntryManager.hpp  main.cpp
src/: BBox.hpp  DiskNode.hpp  DiskRtree.hpp  Point.hpp  Pool.hpp  RTree.cpp  RTree.hpp  RTreeNode.hpp  SVGRenderer.hpp
tests/: BBoxTest.cpp  PointTest.cpp  RTreeNodeTest.cpp  RTreeTest.cpp  otherTest.cpp
